[gd_scene load_steps=13 format=3 uid="uid://brynt3jvn4a67"]

[ext_resource type="Script" path="res://src/Scripts/Exterior/exterior.gd" id="1_5n72r"]
[ext_resource type="PackedScene" uid="uid://c4ftf4ulcd11v" path="res://src/Scenes/Exterior/wall.tscn" id="2_tw0bi"]
[ext_resource type="PackedScene" uid="uid://c3wx4dw5u5doi" path="res://src/Scenes/Exterior/large_robot.tscn" id="3_hd2ba"]
[ext_resource type="PackedScene" uid="uid://cnad56jjr8srn" path="res://src/Scenes/Exterior/lava.tscn" id="3_hgbjy"]
[ext_resource type="PackedScene" uid="uid://c5rj65ofaxjxd" path="res://src/Scenes/UI/health_bar.tscn" id="5_f1sqc"]
[ext_resource type="PackedScene" uid="uid://di8c8qceau67x" path="res://src/Scenes/UI/shield_bar.tscn" id="6_tp6uc"]
[ext_resource type="PackedScene" uid="uid://datddm4c4r4qe" path="res://src/Scenes/UI/fuel_bar.tscn" id="7_n4rx7"]
[ext_resource type="PackedScene" uid="uid://dcroef6gk2jkj" path="res://src/Scenes/UI/ammo_bar.tscn" id="8_mnlyr"]
[ext_resource type="PackedScene" uid="uid://blthf1ai0yit6" path="res://src/Scenes/UI/distance_bar.tscn" id="9_seege"]
[ext_resource type="Texture2D" uid="uid://cnho66eaqln53" path="res://Assets/Sprites/meter.png" id="15_2ftun"]
[ext_resource type="Texture2D" uid="uid://vtnrutq6hjx7" path="res://Assets/Sprites/you_marker.png" id="16_tuiu2"]
[ext_resource type="Texture2D" uid="uid://jud8kbxkecg6" path="res://Assets/Sprites/danger_marker.png" id="17_3r2t5"]

[node name="Exterior" type="Node2D"]
script = ExtResource("1_5n72r")

[node name="Wall" parent="." instance=ExtResource("2_tw0bi")]
position = Vector2(-64, 0)

[node name="LargeRobot" parent="." node_paths=PackedStringArray("wall", "lava") instance=ExtResource("3_hd2ba")]
position = Vector2(176, 135)
wall = NodePath("../Wall")
lava = NodePath("../Lava")

[node name="Camera2D" type="Camera2D" parent="LargeRobot"]
offset = Vector2(64, 1.45519e-11)

[node name="Lava" parent="." instance=ExtResource("3_hgbjy")]
position = Vector2(176, 480)

[node name="UI" type="Control" parent="."]
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 480.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CockpitWindow" type="ColorRect" parent="UI"]
layout_mode = 0
offset_left = 333.0
offset_top = 8.0
offset_right = 471.0
offset_bottom = 140.0
color = Color(0, 1, 0, 1)

[node name="HealthBars" type="GridContainer" parent="UI"]
layout_mode = 0
offset_left = 352.0
offset_top = 151.0
offset_right = 452.0
offset_bottom = 251.0
columns = 2

[node name="HealthBar" parent="UI/HealthBars" instance=ExtResource("5_f1sqc")]
layout_mode = 2

[node name="ShieldBar" parent="UI/HealthBars" instance=ExtResource("6_tp6uc")]
layout_mode = 2

[node name="FuelBar" parent="UI/HealthBars" instance=ExtResource("7_n4rx7")]
layout_mode = 2

[node name="AmmoBar" parent="UI/HealthBars" instance=ExtResource("8_mnlyr")]
layout_mode = 2

[node name="DistanceBar" parent="UI" instance=ExtResource("9_seege")]
layout_mode = 0
offset_left = 0.0
offset_top = 0.0
offset_right = 8.0
offset_bottom = 256.0

[node name="DistanceMeter" type="TextureRect" parent="UI"]
layout_mode = 0
offset_left = 291.0
offset_top = 10.0
offset_right = 299.0
offset_bottom = 266.0
texture = ExtResource("15_2ftun")

[node name="YouMarker" type="TextureRect" parent="UI/DistanceMeter"]
layout_mode = 0
offset_left = 1.0
offset_top = 248.0
offset_right = 33.0
offset_bottom = 256.0
texture = ExtResource("16_tuiu2")

[node name="DangerMarker" type="TextureRect" parent="UI/DistanceMeter"]
layout_mode = 0
offset_left = 1.0
offset_top = 251.0
offset_right = 33.0
offset_bottom = 259.0
texture = ExtResource("17_3r2t5")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[connection signal="kill_enemy" from="LargeRobot" to="." method="kill_enemy"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
